# compiler-practise

./: CMakeLists.txt  LICENSE
calc/: AST.h  Calc.cpp  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Semantics.cpp  Semantics.h
lexer/: Lexer.cpp  Lexer.h
